project/log/20250523_011330.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

object3D.VS.hlsl:16:1: error: unknown type name 'VertexShaderQutput'; did you mean 'VertexShaderOutput'?
VertexShaderQutput main(VertexShaderInput input)
^~~~~~~~~~~~~~~~~~
VertexShaderOutput
./Object3d.hlsli:2:8: note: 'VertexShaderOutput' declared here
struct VertexShaderOutput
       ^
object3D.VS.hlsl:18:4: error: use of undeclared identifier 'output'
   output.texcoord = input.texcoord;
   ^
object3D.VS.hlsl:19:5: error: use of undeclared identifier 'output'
    output.position = mul(input.position,gTransformationMatrix.WVP);
    ^
object3D.VS.hlsl:20:12: error: use of undeclared identifier 'output'
    return output;
           ^

